# routes/user.js
@@ -7,12 +7,15 @@ const {
   logout,
   forgotPassword,
   passwordReset,
+  getLoggedInUserDetails,
 } = require('../controllers/userController');
+const { isLoggedIn } = require('../middlewares/user');
 
 router.route('/signup').post(signup);
 router.route('/login').post(login);
 router.route('/logout').get(logout);
 router.route('/forgotPassword').post(forgotPassword);
 router.route('/password/reset/:token').post(passwordReset);
+router.route('/userdashboard').get(isLoggedIn, getLoggedInUserDetails);
 
 module.exports = router;
